--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
       <br>
 			<h6 class="text-center">Cabot's development is 20% done. More features will come as development continues.</h6>
       <br>
-      <h6 class="text-center">You can see Cabot's code on <a href="https://repl.it/@CCreativeCND/Cabot" class="text-info">Repl.it</a>.</h6>
 			<br>
 			<div class="form-row text-center">
 				<div class="col-12">
@@ -101,6 +100,8 @@
           <a href="https://discord.gg/fMKTPZW"><button type="button" class="btn btn-secondary">JOIN SUPPORT SERVER</button></a>
           <br><br>
           <a href="https://status.cabot.calum.gq/"><button type="button" class="btn btn-secondary">STATUS</button></a>
+          <br><br>
+          <a href="https://github.com/CCreativeCND/Cabot"><button type="button" class="btn btn-secondary">GITHUB</button></a>
 				</div>
 			</div>
 		</div>
