fixed a bug in suggestions, update readme, update emojis

--- a/website/index.html
+++ b/website/index.html
@@ -73,13 +73,14 @@
 		<div class="container text-light">
 			<h1 class="text-center">Welcome to Cabot.</h1>
 			<br>
-			<p class="text-center">Cabot is a simple, but powerful, Discord bot written in Discord.js.</p>
+			<p class="text-center">Cabot is a simple, but powerful, modular Discord bot written in Discord.js.</p>
       <br>
       <p class="text-center">It's purpose is to be a useful and fully free bot for servers. Currently, it is still in development.</p>
       <h3 class="text-center">We currently have these features:</h3>
 			<ul class="text-center">
         <h4>Fun</h4>
 				<li>8 Ball</li>
+        <li>Colors</li>
 				<li>Repeat After Me</li>
         <h4>Moderation</h4>
         <li>Kicking, Banning, and Warning a user</li>
