--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Cabot</title>
-		<link rel="icon" type="image/png" href="https://calum.gq/favicon.png">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="title" content="Cabot">
     <meta name="description" content="A free Discord bot with many features">
     <meta name="keywords" content="discord, bot">
