--- a/website/404.html
+++ b/website/404.html
@@ -280,7 +280,7 @@
       ctx.fillText("404", 200, 270);
       startGlitch(ctx);
       $(".home-btn").click(function () {
-        window.location.href = "http://google.com";
+        window.location.href = "/";
       });
     });
   </script>
