--- a/website/index.html
+++ b/website/index.html
@@ -103,7 +103,7 @@
           <br><br>
           <a href="https://status.cabot.calum.gq/"><button type="button" class="btn btn-secondary">STATUS</button></a>
           <br><br>
-          <a href="https://github.com/CCreativeCND/Cabot"><button type="button" class="btn btn-secondary">GITHUB</button></a>
+          <a href="https://github.com/caburum/Cabot"><button type="button" class="btn btn-secondary">GITHUB</button></a>
 				</div>
 			</div>
 		</div>
