--- a/website/index.html
+++ b/website/index.html
@@ -111,7 +111,7 @@
 		<footer class="bg-secondary">
 			<br>
 			<span class="container text-light footer-span">
-			Made by <a href="https://calum.gq" class="text-white">Calum Dingwall</a>. Please email <a href="mailto:webmaster@calum.gq" class="text-white">webmaster@calum.gq</a> if there are any problems.
+			Made by <a href="https://calum.gq" class="text-white">Calum Dingwall</a>.
 			</span>
 			<br>
 		</footer>
