--- a/website/index.html
+++ b/website/index.html
@@ -97,11 +97,11 @@
 			<br>
 			<div class="form-row text-center">
 				<div class="col-12">
-					<a href="https://discord.com/api/oauth2/authorize?client_id=676143098102939658&permissions=1007090774&redirect_uri=https%3A%2F%2Fcabot.calum.gq&scope=bot"><button type="button" class="btn btn-secondary">ADD BOT</button></a>
+					<a href="https://discord.com/api/oauth2/authorize?client_id=676143098102939658&permissions=1007090774&scope=bot%20applications.commands"><button type="button" class="btn btn-secondary">ADD BOT</button></a>
 					<br><br>
 					<a href="https://discord.gg/fMKTPZW"><button type="button" class="btn btn-secondary">JOIN SUPPORT SERVER</button></a>
 					<br><br>
-					<a href="https://status.cabot.calum.gq/"><button type="button" class="btn btn-secondary">STATUS</button></a>
+					<a href="https://stats.uptimerobot.com/x2rNqsJQwJ"><button type="button" class="btn btn-secondary">STATUS</button></a>
 					<br><br>
 					<a href="https://github.com/caburum/Cabot"><button type="button" class="btn btn-secondary">GITHUB</button></a>
 				</div>
